# equilibrium-sql-multiagent

./: .dockerignore.md  .gitignore  Dockerfile  README.md  cloudbuild.yaml  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
docs/: .env.example  Cloud-Run-Deployment.md  ENAHO-2024-description.md  How-to-add-a-new-database.md  Project-Structure.md  Project-Summary.md
esma/agents/: base.py  baseReAct.py  enaho.py  enaho_ReAct.py  esma-dev.py  esma.py  geih.py  geih_ReAct.py  router.py
esma/agents/archive/: enaho_ReAct.py  enaho_linear.py  geih_linear.py
esma/api/: app.py
esma/config/: settings.py
esma/memory/: state_models.py
esma/prompts/: enaho_system.md  enaho_tables.md  enemdu_tables.md  ephc_tables.md  geih_system.md  geih_tables.md  general_system.md  prompt_loader.py
esma/prompts/archive/: enaho_system.md  geih_system.md
esma/tools/: column_retriever.py  column_retriever_vertexai.py  methodology_retriever.py  schema_gatherer.py  schema_validator.py  sql_executor.py  table_descriptions_retriever.py
esma/utils/: bigquery_client.py
notebooks/: testing-gcs.ipynb
scripts/bigquery_setup/: data_upload_pipeline.py
scripts/data_preprocessing/: data_dictionaries_ENEMDU-2024.py  data_integration_GEIH-2024.py
scripts/documentation_preparation/: dict_webscrapping_GEIH-2024.py  parse_documentation.py  parsing_instructions_enaho.md  parsing_instructions_ephc.md  parsing_instructions_geih.md
scripts/notebooks/: testing-esma.ipynb  testing-fastapi.ipynb  testing-gcs.ipynb  testing-gemini.ipynb  testing-sql-tools.ipynb  testing-vertexai-retriever.ipynb  testing-vertexai-vector-search.ipynb  testing.ipynb
scripts/pinecone/: build_knowledge_base.py
scripts/vertexai-vector-search/: create_indexes.py  generate_embeddings.py  manage_indexes.py  populate-columns.py
tests/: test_bigquery_client.py  test_column_retriever.py  test_schema_validator.py  test_sql_executor.py  test_vertexai_column_retriever.py
