[project]
name = "equilibrium-sql-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-storage>=3.3.0",
    "openai>=1.102.0",
    "pandas-gbq>=0.29.2",
    "pinecone>=7.3.0",
    "voyageai>=0.3.4",
]

[dependency-groups]
dev = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.13.5",
    "ipykernel>=6.30.1",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
]
