[project]
name = "esma"
version = "0.1.0"
description = "Chatbot system that can answer complex user questions by querying two separate, complex databases: ENAHO and GEIH."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-bigquery-storage>=2.33.0",
    "google-cloud-storage<3.0.0",
    "google-genai>=1.33.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-google-vertexai>=2.1.2",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.12",
    "langgraph>=0.6.6",
    "langgraph-api>=0.4.20",
    "langgraph-cli[inmem]>=0.4.2",
    "openai>=1.102.0",
    "pandas-gbq>=0.29.2",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-bigquery>=1.15.0",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.35.0",
    "voyageai>=0.3.4",
]

[dependency-groups]
dev = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.13.5",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "pypdf2>=3.0.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["esma*"]

[tool.uv]
default-groups = "all"
